# trio3-ros2-interfaces

./: CMakeLists.txt  README.md  package.xml
action/: AddRobotMotion.action  Align.action  DetectGrasp.action  Fibonacci.action  GetPointCloud.action  HandEyeCalibration.action  PickNPlace.action  PlanTrajectory.action  ReleaseObject.action  ReplanMotion.action  ReplanTrajectory.action  RobotAction.action  RobotMove.action  TrifocalScan.action
msg/: Action.msg  ActionResultFlag.msg  ColorImage.msg  CoreActionPhase.msg  DepthImage.msg  GrayscaleImage.msg  GripperActionType.msg  Matrix4x4.msg  Motion.msg  MotionType.msg  MoveGripper.msg  Object.msg  ObjectType.msg  ReplanMode.msg  Robot.msg  RobotStatus.msg  Sector.msg  StopRobot.msg  Trajectory.msg  TypeOfApproach.msg
srv/: CheckCoordinate.srv  GetColorImage.srv  GetDepthImage.srv  GetHomePose.srv  GetMaskedPointCloud.srv  GetObject.srv  GetRobot.srv  GetRobotStatus.srv  GetTransformation.srv  ObjectInGripper.srv  PoseUpdate.srv  PoseUpdateObject.srv  PoseUpdateRobot.srv  ProcessImage.srv  ReturnMessage.srv  RobotState.srv  SetRequest.srv  TrajectoryDone.srv
